Added project font

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
 @import 'partials/reset';
 @import 'partials/header';
 @import 'partials/main';
