--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto");
+:root {
+  font-size: 16px; }
+
 * {
   margin: 0;
   padding: 0;
@@ -11,11 +14,21 @@ body {
   background-position: 50%;
   background-attachment: fixed;
   color: #fff;
-  text-shadow: 0 0 5px #666; }
+  text-shadow: 0 0 5px #666;
+  font-family: 'Roboto', sans-serif; }
 
 main {
-  max-width: 1200px;
+  max-width: 1000px;
   margin: auto; }
   main .repositories {
     display: flex;
-    flex-wrap: wrap; }
+    flex-wrap: wrap;
+    align-content: space-around; }
+    main .repositories .flexbox-item {
+      width: 250px;
+      background-color: rgba(255, 255, 255, 0.6);
+      padding: 15px;
+      margin: 10px;
+      color: #666;
+      text-shadow: none;
+      font-size: .85rem; }
