--- a/assets/scss/partials/_main.scss
+++ b/assets/scss/partials/_main.scss
@@ -6,14 +6,27 @@ body {
     background-attachment: fixed;
     color: #fff;
     text-shadow: 0 0 5px #666;
+    font-family: 'Roboto', sans-serif;
 }
 
 main {
-    max-width: 1200px;
+    max-width: 1000px;
     margin: auto;
 
     .repositories {
         display: flex;
         flex-wrap: wrap;
+        align-content: space-around;
+
+        .flexbox-item {
+            width: 250px;
+            background-color: rgba(255, 255, 255, 0.6);
+            padding: 15px;
+            margin: 10px;
+            color: #666;
+            text-shadow: none;
+            font-size: .85rem;
+            position: relative;
+        }
     }
 }
