--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,10 +20,21 @@ body {
 main {
   max-width: 1000px;
   margin: auto; }
+  main .currentTime {
+    text-align: center;
+    margin-top: 30vh;
+    margin-bottom: 30px; }
+    main .currentTime .date {
+      font-size: .8rem; }
+    main .currentTime .hour {
+      font-size: 5rem;
+      font-weight: bold; }
   main .repositories {
     display: flex;
     flex-wrap: wrap;
     align-content: space-around; }
+    main .repositories h3 {
+      margin-bottom: 10px; }
     main .repositories .flexbox-item {
       width: 250px;
       background-color: rgba(255, 255, 255, 0.6);
@@ -31,4 +42,13 @@ main {
       margin: 10px;
       color: #666;
       text-shadow: none;
-      font-size: .85rem; }
+      font-size: .85rem;
+      position: relative; }
+      main .repositories .flexbox-item .view-repo {
+        margin: 15px auto 20px auto;
+        background-color: #666; }
+        main .repositories .flexbox-item .view-repo a {
+          text-decoration: none;
+          color: #fff;
+          padding: 8px;
+          display: inline-block; }
