--- a/assets/scss/partials/_main.scss
+++ b/assets/scss/partials/_main.scss
@@ -13,7 +13,27 @@ main {
     max-width: 1000px;
     margin: auto;
 
+    .currentTime {
+        text-align: center;
+        margin-top: 30vh;
+        margin-bottom: 30px;
+
+        .date {
+            font-size: .8rem;
+        }
+
+        .hour {
+            font-size: 5rem;
+            font-weight: bold;
+        }
+    }
+
     .repositories {
+
+        h3 {
+            margin-bottom: 10px;
+        }
+
         display: flex;
         flex-wrap: wrap;
         align-content: space-around;
@@ -27,6 +47,18 @@ main {
             text-shadow: none;
             font-size: .85rem;
             position: relative;
+
+            .view-repo {
+                margin: 15px auto 20px auto;
+                background-color: #666;
+
+                a {
+                    text-decoration: none;
+                    color: #fff;
+                    padding: 8px;
+                    display: inline-block;
+                }
+            }
         }
     }
 }
