--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,9 +17,21 @@ body {
   text-shadow: 0 0 5px #666;
   font-family: 'Roboto', sans-serif; }
 
+.fl {
+  float: left; }
+
 main {
   max-width: 1000px;
   margin: auto; }
+  main .search-field input {
+    color: #666;
+    padding: 12px 7px;
+    border-radius: 10px;
+    width: 90%; }
+  main .search-field .fa,
+  main .search-field .fab {
+    font-size: 2rem;
+    margin: .5rem 10px; }
   main .currentTime {
     text-align: center;
     margin-top: 30vh;
@@ -32,7 +44,7 @@ main {
   main .repositories {
     display: flex;
     flex-wrap: wrap;
-    align-content: space-around; }
+    justify-items: space-around; }
     main .repositories h3 {
       margin-bottom: 10px; }
     main .repositories .flexbox-item {
@@ -52,3 +64,13 @@ main {
           color: #fff;
           padding: 8px;
           display: inline-block; }
+      main .repositories .flexbox-item .stars {
+        position: absolute;
+        bottom: 0;
+        background-color: rgba(255, 255, 255, 0.6);
+        padding: 5px 0;
+        width: 100%;
+        margin-left: -15px; }
+        main .repositories .flexbox-item .stars i {
+          margin-left: 7px;
+          font-size: .7rem; }
