--- a/assets/scss/partials/_main.scss
+++ b/assets/scss/partials/_main.scss
@@ -9,9 +9,22 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+.fl {
+    float: left;
+}
+
 main {
     max-width: 1000px;
     margin: auto;
+
+    .search-field {
+        input {
+            color: #666;
+            padding: 12px 7px;
+            border-radius: 10px;
+            width: 90%;
+        }
+    }
 
     .currentTime {
         text-align: center;
@@ -36,7 +49,7 @@ main {
 
         display: flex;
         flex-wrap: wrap;
-        align-content: space-around;
+        justify-items: space-around;
 
         .flexbox-item {
             width: 250px;
@@ -57,6 +70,20 @@ main {
                     color: #fff;
                     padding: 8px;
                     display: inline-block;
+                }
+            }
+
+            .stars {
+                position: absolute;
+                bottom: 0;
+                background-color: rgba(255, 255, 255, 0.6);
+                padding: 5px 0;
+                width: 100%;
+                margin-left: -15px;
+
+                i {
+                    margin-left: 7px;
+                    font-size: .7rem;
                 }
             }
         }
