--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,10 @@
   padding: 0;
   box-sizing: border-box; }
 
+header {
+  text-align: center;
+  font-size: 5em; }
+
 body {
   background-image: url(/assets/img/bg-wolf.jpg);
   background-size: cover;
@@ -28,10 +32,6 @@ main {
     padding: 12px 7px;
     border-radius: 10px;
     width: 90%; }
-  main .search-field .fa,
-  main .search-field .fab {
-    font-size: 2rem;
-    margin: .5rem 10px; }
   main .currentTime {
     text-align: center;
     margin-top: 30vh;
@@ -44,7 +44,7 @@ main {
   main .repositories {
     display: flex;
     flex-wrap: wrap;
-    justify-items: space-around; }
+    justify-content: space-around; }
     main .repositories h3 {
       margin-bottom: 10px; }
     main .repositories .flexbox-item {
