--- a/assets/scss/partials/_main.scss
+++ b/assets/scss/partials/_main.scss
@@ -49,7 +49,7 @@ main {
 
         display: flex;
         flex-wrap: wrap;
-        justify-items: space-around;
+        justify-content: space-around;
 
         .flexbox-item {
             width: 250px;
