Removed wrap and justify content from repo display

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,9 +46,7 @@ main {
     font-weight: bold; }
 
 .repositories {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around; }
+  display: flex; }
   .repositories h3 {
     margin-bottom: 10px; }
   .repositories .flexbox-item {
