--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,17 +46,20 @@ main {
     font-weight: bold; }
 
 .repositories {
+  width: 100vw;
+  overflow: hidden;
+  margin-top: 30px;
   display: flex; }
   .repositories h3 {
     margin-bottom: 10px; }
   .repositories .flexbox-item {
-    width: 250px;
+    min-width: 200px;
     background-color: rgba(255, 255, 255, 0.6);
     padding: 15px;
     margin: 10px;
     color: #666;
     text-shadow: none;
-    font-size: .85rem;
+    font-size: .75rem;
     position: relative; }
     .repositories .flexbox-item .view-repo {
       margin: 15px auto 20px auto;
