--- a/assets/scss/partials/_repos.scss
+++ b/assets/scss/partials/_repos.scss
@@ -1,4 +1,7 @@
 .repositories {
+    width: 100vw;
+    overflow: hidden;
+    margin-top: 30px;
 
     h3 {
         margin-bottom: 10px;
@@ -7,13 +10,13 @@
     display: flex;
 
     .flexbox-item {
-        width: 250px;
+        min-width: 200px;
         background-color: rgba(255, 255, 255, 0.6);
         padding: 15px;
         margin: 10px;
         color: #666;
         text-shadow: none;
-        font-size: .85rem;
+        font-size: .75rem;
         position: relative;
 
         .view-repo {
