--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,10 +48,13 @@ main {
 .repositories {
   width: 100vw;
   overflow: hidden;
+  display: flex;
   margin-top: 30px;
-  display: flex; }
+  font-size: 1rem; }
   .repositories h3 {
     margin-bottom: 10px; }
+    .repositories h3 .lang {
+      font-size: .5rem; }
   .repositories .flexbox-item {
     min-width: 200px;
     background-color: rgba(255, 255, 255, 0.6);
@@ -59,7 +62,7 @@ main {
     margin: 10px;
     color: #666;
     text-shadow: none;
-    font-size: .75rem;
+    font-size: .7rem;
     position: relative; }
     .repositories .flexbox-item .view-repo {
       margin: 15px auto 20px auto;
