--- a/assets/scss/partials/_repos.scss
+++ b/assets/scss/partials/_repos.scss
@@ -1,13 +1,17 @@
 .repositories {
     width: 100vw;
     overflow: hidden;
+    display: flex;
     margin-top: 30px;
+    font-size: 1rem;
 
     h3 {
         margin-bottom: 10px;
-    }
 
-    display: flex;
+        .lang {
+            font-size: .5rem;
+        }
+    }
 
     .flexbox-item {
         min-width: 200px;
@@ -16,7 +20,7 @@
         margin: 10px;
         color: #666;
         text-shadow: none;
-        font-size: .75rem;
+        font-size: .7rem;
         position: relative;
 
         .view-repo {
