--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,12 +66,18 @@ main {
     position: relative; }
     .repositories .flexbox-item .view-repo {
       margin: 15px auto 20px auto;
-      background-color: #666; }
+      background-color: #666;
+      transition: all .5s; }
+      .repositories .flexbox-item .view-repo:hover, .repositories .flexbox-item .view-repo:focus {
+        background-color: #ccc; }
+        .repositories .flexbox-item .view-repo:hover a, .repositories .flexbox-item .view-repo:focus a {
+          color: #666; }
       .repositories .flexbox-item .view-repo a {
         text-decoration: none;
         color: #fff;
         padding: 8px;
-        display: inline-block; }
+        display: inline-block;
+        font-size: .8rem; }
     .repositories .flexbox-item .stars {
       position: absolute;
       bottom: 0;
