--- a/assets/scss/partials/_repos.scss
+++ b/assets/scss/partials/_repos.scss
@@ -26,12 +26,23 @@
         .view-repo {
             margin: 15px auto 20px auto;
             background-color: #666;
+            transition: all .5s;
+
+            &:hover,
+            &:focus {
+                background-color: #ccc;
+
+                a {
+                    color: #666;
+                }
+            }
 
             a {
                 text-decoration: none;
                 color: #fff;
                 padding: 8px;
                 display: inline-block;
+                font-size: .8rem;
             }
         }
 
