--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,7 +63,8 @@ main {
     color: #666;
     text-shadow: none;
     font-size: .7rem;
-    position: relative; }
+    position: relative;
+    border-radius: 10px; }
     .repositories .flexbox-item .view-repo {
       margin: 15px auto 20px auto;
       background-color: #666;
@@ -84,7 +85,9 @@ main {
       background-color: rgba(255, 255, 255, 0.6);
       padding: 5px 0;
       width: 100%;
-      margin-left: -15px; }
+      margin-left: -15px;
+      border-bottom-left-radius: 10px;
+      border-bottom-right-radius: 10px; }
       .repositories .flexbox-item .stars i {
         margin-left: 7px;
         font-size: .7rem; }
