--- a/assets/scss/partials/_repos.scss
+++ b/assets/scss/partials/_repos.scss
@@ -22,6 +22,7 @@
         text-shadow: none;
         font-size: .7rem;
         position: relative;
+        border-radius: 10px;
 
         .view-repo {
             margin: 15px auto 20px auto;
@@ -53,6 +54,8 @@
             padding: 5px 0;
             width: 100%;
             margin-left: -15px;
+            border-bottom-left-radius: 10px;
+            border-bottom-right-radius: 10px;
 
             i {
                 margin-left: 7px;
