Added style for AM/PM display

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,10 @@ body {
 .fl {
   float: left; }
 
+.xsmall {
+  font-size: .3em;
+  font-weight: normal; }
+
 main {
   margin: auto; }
   main .search-field {
