--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,10 +11,11 @@ header {
   text-align: center;
   font-size: 5em; }
 
-body {
+.wrapper {
   background-image: url(/assets/img/bg-wolf.jpg);
   background-size: cover;
   min-height: 100vh;
+  width: 100vw;
   background-position: 50%;
   background-attachment: fixed;
   color: #fff;
