--- a/assets/scss/partials/_main.scss
+++ b/assets/scss/partials/_main.scss
@@ -1,7 +1,8 @@
-body {
+.wrapper {
     background-image: url(/assets/img/bg-wolf.jpg);
     background-size: cover;
     min-height: 100vh;
+    width: 100vw;
     background-position: 50%;
     background-attachment: fixed;
     color: #fff;
