--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,6 @@ header {
   font-size: 5em; }
 
 .wrapper {
-  background-image: url(/assets/img/bg-wolf.jpg);
   background-size: cover;
   min-height: 100vh;
   width: 100vw;
@@ -21,6 +20,8 @@ header {
   color: #fff;
   text-shadow: 0 0 5px #666;
   font-family: 'Roboto', sans-serif; }
+  .wrapper.bg-1 {
+    background-image: url(/assets/img/bg-wolf.jpg); }
 
 .fl {
   float: left; }
