--- a/assets/scss/partials/_main.scss
+++ b/assets/scss/partials/_main.scss
@@ -1,5 +1,4 @@
 .wrapper {
-    background-image: url(/assets/img/bg-wolf.jpg);
     background-size: cover;
     min-height: 100vh;
     width: 100vw;
@@ -8,6 +7,10 @@
     color: #fff;
     text-shadow: 0 0 5px #666;
     font-family: 'Roboto', sans-serif;
+
+    &.bg-1 {
+        background-image: url(/assets/img/bg-wolf.jpg);
+    }
 }
 
 .fl {
