--- a/assets/scss/partials/_main.scss
+++ b/assets/scss/partials/_main.scss
@@ -8,7 +8,7 @@
     text-shadow: 0 0 5px #666;
     font-family: 'Roboto', sans-serif;
 
-    &.bg-1 {
+    &#bg-1 {
         background-image: url(/assets/img/bg-wolf.jpg);
     }
 }
