Created partial for settings, set visibility of settings to hidden

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -5,4 +5,5 @@
 @import 'partials/main';
 @import 'partials/clock';
 @import 'partials/repos';
+@import 'partials/settings';
 @import 'partials/footer';
