--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,3 +97,6 @@ main {
       .repositories .flexbox-item .stars i {
         margin-left: 7px;
         font-size: .7rem; }
+
+.settings {
+  visibility: hidden; }
