Added overflow hidden to page element to get rid of bottom scrollbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,8 @@ header {
   font-size: 5em; }
 
 .page {
-  transition: all .5s; }
+  transition: all .5s;
+  overflow: hidden; }
 
 .wrapper {
   background-size: cover;
