--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,12 @@
 
 header {
   text-align: center;
-  font-size: 5em; }
+  font-size: 5em;
+  position: relative; }
+  header .showSettings {
+    position: absolute;
+    top: 10px;
+    right: 10px; }
 
 .page {
   transition: all .5s;
