--- a/assets/scss/partials/_header.scss
+++ b/assets/scss/partials/_header.scss
@@ -1,4 +1,11 @@
 header {
     text-align: center;
     font-size: 5em;
+    position: relative;
+
+    .showSettings {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+    }
 }
