--- a/assets/scss/partials/_header.scss
+++ b/assets/scss/partials/_header.scss
@@ -3,9 +3,19 @@ header {
     font-size: 5em;
     position: relative;
 
-    .showSettings {
+    .settingsButton {
         position: absolute;
         top: 10px;
         right: 10px;
+
+        button {
+            position: absolute;
+            top: 0;
+            right: 0;
+        }
+
+        .hideSettings {
+            display: none;
+        }
     }
 }
