--- a/assets/scss/partials/_header.scss
+++ b/assets/scss/partials/_header.scss
@@ -5,13 +5,18 @@ header {
 
     .settingsButton {
         position: absolute;
-        top: 10px;
-        right: 10px;
+        top: 20px;
+        right: 20px;
 
         button {
             position: absolute;
             top: 0;
             right: 0;
+            background: transparent;
+            border: none;
+            color: #fff;
+            text-shadow: 0 0 5px #666;
+            font-size: 1.5rem;
         }
 
         .hideSettings {
