Set bg color and height for settings panel

--- a/assets/scss/partials/_settings.scss
+++ b/assets/scss/partials/_settings.scss
@@ -1,6 +1,9 @@
 .settings {
     //  visibility: hidden;
     float: right;
-    width: 300px;
+    width: 320px;
     transition: all .5s;
+    background-color: #CACDCB;
+    height: 100vh;
+    padding: 20px;
 }
