--- a/assets/scss/partials/_header.scss
+++ b/assets/scss/partials/_header.scss
@@ -3,6 +3,10 @@ header {
     font-size: 5em;
     position: relative;
 
+    @media screen and (max-width: 380px) {
+        position: static;
+    }
+
     .settingsButton {
         position: absolute;
         top: 20px;
@@ -17,6 +21,11 @@ header {
             color: #fff;
             text-shadow: 0 0 5px #666;
             font-size: 1.5rem;
+
+            @media screen and (max-width: 380px) {
+                color: #333;
+                text-shadow: none;
+            }
         }
 
         .hideSettings {
