--- a/assets/scss/partials/_main.scss
+++ b/assets/scss/partials/_main.scss
@@ -1,6 +1,7 @@
 .page {
     transition: all .5s;
     overflow: hidden;
+    background-color: #ccc;
 }
 
 .wrapper {
@@ -12,6 +13,13 @@
     color: #fff;
     text-shadow: 0 0 5px #666;
     font-family: 'Roboto', sans-serif;
+    box-shadow: 0 0 10px #333;
+    z-index: 999;
+    position: relative;
+
+    @media screen and (max-width: 380px) {
+        position: static;
+    }
 
     &#bg-1 {
         background-image: url(/assets/img/bg-wolf.jpg);
