--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,9 +28,9 @@ header {
       text-shadow: 0 0 5px #666;
       font-size: 1.5rem; }
       @media screen and (max-width: 380px) {
-        header .settingsButton button {
-          color: #333;
-          text-shadow: none; } }
+        header .settingsButton button.hideSettings {
+          text-shadow: none;
+          color: #666; } }
     header .settingsButton .hideSettings {
       display: none; }
 
@@ -139,7 +139,10 @@ main {
   background-color: #CACDCB;
   height: 100vh;
   padding: 20px;
-  margin-right: -320px; }
+  margin-right: -320px;
+  font-family: 'Roboto', sans-serif;
+  color: #666;
+  font-size: .9rem; }
   @media screen and (max-width: 380px) {
     .settings {
       width: 100vw;
