--- a/assets/scss/partials/_header.scss
+++ b/assets/scss/partials/_header.scss
@@ -22,9 +22,12 @@ header {
             text-shadow: 0 0 5px #666;
             font-size: 1.5rem;
 
-            @media screen and (max-width: 380px) {
-                color: #333;
-                text-shadow: none;
+
+            &.hideSettings {
+                @media screen and (max-width: 380px) {
+                    text-shadow: none;
+                    color: #666;
+                }
             }
         }
 
