--- a/assets/scss/partials/_settings.scss
+++ b/assets/scss/partials/_settings.scss
@@ -7,6 +7,9 @@
     height: 100vh;
     padding: 20px;
     margin-right: -320px;
+    font-family: 'Roboto', sans-serif;
+    color: #666;
+    font-size: .9rem;
 
     @media screen and (max-width: 380px) {
         width: 100vw;
