--- a/assets/scss/partials/_settings.scss
+++ b/assets/scss/partials/_settings.scss
@@ -15,4 +15,11 @@
         width: 100vw;
         margin-right: -100vw;
     }
+
+    h3 {
+        margin-bottom: 10px;
+        font-weight: normal;
+        font-size: 1.1rem;
+        color: #333;
+    }
 }
