--- a/assets/scss/partials/_settings.scss
+++ b/assets/scss/partials/_settings.scss
@@ -22,4 +22,14 @@
         font-size: 1.1rem;
         color: #333;
     }
+
+    input[type='text'] {
+        background: transparent;
+        width: 90%;
+        border: none;
+        border-bottom: 1px solid #666;
+        color: #666;
+        font-style: italic;
+        margin: 6px 0;
+    }
 }
