--- a/assets/scss/partials/_settings.scss
+++ b/assets/scss/partials/_settings.scss
@@ -46,8 +46,14 @@
             width: 45%;
             margin: 2%;
             position: relative;
-            height: 80px;
+            height: 67px;
             overflow: hidden;
+
+            input {
+                position: absolute;
+                top: 5px;
+                left: 5px;
+            }
 
             img {
                 max-width: 100%;
