--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,7 +162,7 @@ main {
     font-weight: normal;
     font-size: 1.1rem;
     color: #333; }
-  .settings input[type='text'] {
+  .settings .chooseUser input[type='text'] {
     background: transparent;
     width: 90%;
     border: none;
@@ -170,6 +170,15 @@ main {
     color: #666;
     font-style: italic;
     margin: 6px 0; }
+  .settings .chooseUser #newGithubUserBttn {
+    width: 8%;
+    margin-left: 2%;
+    border: 1px solid #666;
+    border-radius: 5px;
+    display: inline-block;
+    text-align: center;
+    padding: 2px 0;
+    background-color: #ddd; }
   .settings .settingsElement {
     margin: 10px 0; }
   .settings .selectBackground {
