--- a/assets/scss/partials/_main.scss
+++ b/assets/scss/partials/_main.scss
@@ -69,4 +69,10 @@ main {
             width: 100%;
         }
     }
+
+    .error {
+        text-align: center;
+        font-size: 1.3rem;
+        width: 100%;
+    }
 }
