--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,9 +101,10 @@ main {
 
 .repositories {
   overflow: hidden;
-  display: flex;
   margin-top: 30px;
   font-size: 1rem; }
+  .repositories .carousel {
+    display: flex; }
   .repositories h3 {
     margin-bottom: 10px; }
     .repositories h3 .lang {
