--- a/assets/scss/partials/_repos.scss
+++ b/assets/scss/partials/_repos.scss
@@ -1,8 +1,11 @@
 .repositories {
     overflow: hidden;
-    display: flex;
     margin-top: 30px;
     font-size: 1rem;
+
+    .carousel {
+        display: flex;
+    }
 
     h3 {
         margin-bottom: 10px;
