Added style for headline

--- a/assets/scss/partials/_repos.scss
+++ b/assets/scss/partials/_repos.scss
@@ -1,3 +1,11 @@
+.reposHeadline {
+    margin-top: 20px;
+    background-color: rgba(255, 255, 255, 0.6);
+    padding: 8px 15px;
+    text-shadow: none;
+    color: #666
+}
+
 .repositories {
     overflow: hidden;
     display: flex;
