--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,6 +99,13 @@ main {
     font-size: 5rem;
     font-weight: bold; }
 
+.reposHeadline {
+  margin-top: 20px;
+  background-color: rgba(255, 255, 255, 0.6);
+  padding: 8px 15px;
+  text-shadow: none;
+  color: #666; }
+
 .repositories {
   overflow: hidden;
   display: flex;
