Inverted headline colors

--- a/assets/scss/partials/_repos.scss
+++ b/assets/scss/partials/_repos.scss
@@ -2,8 +2,8 @@
     h3 {
         padding:7px 15px;
         margin:15px 0;
-        background-color: rgba(255, 255, 255, 0.7);
-        color:#666;
+        background-color: rgba(80,80,80,0.3);
+        color:#fff;
         text-shadow: none;
     }
 }
