--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,24 @@ header {
   overflow: hidden;
   background-color: #ccc; }
 
+button {
+  margin: 15px auto 20px auto;
+  background-color: #666;
+  transition: all .5s;
+  color: #fff;
+  padding: 8px;
+  border: none; }
+  button a {
+    text-decoration: none;
+    color: #fff;
+    display: inline-block;
+    font-size: .8rem; }
+  button:hover, button:focus {
+    background-color: #ccc;
+    color: #666; }
+    button:hover a, button:focus a {
+      color: #666; }
+
 .wrapper {
   background-size: cover;
   min-height: 100vh;
@@ -125,20 +143,6 @@ main {
     font-size: .7rem;
     position: relative;
     border-radius: 10px; }
-    .repositories .flexbox-item .view-repo {
-      margin: 15px auto 20px auto;
-      background-color: #666;
-      transition: all .5s; }
-      .repositories .flexbox-item .view-repo:hover, .repositories .flexbox-item .view-repo:focus {
-        background-color: #ccc; }
-        .repositories .flexbox-item .view-repo:hover a, .repositories .flexbox-item .view-repo:focus a {
-          color: #666; }
-      .repositories .flexbox-item .view-repo a {
-        text-decoration: none;
-        color: #fff;
-        padding: 8px;
-        display: inline-block;
-        font-size: .8rem; }
     .repositories .flexbox-item .stars {
       position: absolute;
       bottom: 0;
