--- a/assets/scss/partials/_main.scss
+++ b/assets/scss/partials/_main.scss
@@ -4,6 +4,32 @@
     background-color: #ccc;
 }
 
+button {
+    margin: 15px auto 20px auto;
+    background-color: #666;
+    transition: all .5s;
+    color: #fff;
+    padding: 8px;
+    border:none;
+
+    a {
+        text-decoration: none;
+        color: #fff;
+        display: inline-block;
+        font-size: .8rem;
+    }
+
+    &:hover,
+    &:focus {
+        background-color: #ccc;
+        color:#666;
+    
+        a {
+            color: #666;
+        }
+    }
+}
+
 .wrapper {
     background-size: cover;
     min-height: 100vh;
