--- a/assets/scss/partials/_main.scss
+++ b/assets/scss/partials/_main.scss
@@ -21,11 +21,11 @@ button {
 
     &:hover,
     &:focus {
-        background-color: #ccc;
-        color:#666;
+        background-color: #aaa;
+        color:#333;
     
         a {
-            color: #666;
+            color: #333;
         }
     }
 }
