--- a/assets/scss/partials/_main.scss
+++ b/assets/scss/partials/_main.scss
@@ -10,7 +10,7 @@ button {
     transition: all .5s;
     color: #fff;
     padding: 8px;
-    border:none;
+    border: none;
 
     a {
         text-decoration: none;
@@ -22,8 +22,8 @@ button {
     &:hover,
     &:focus {
         background-color: #aaa;
-        color:#333;
-    
+        color: #333;
+
         a {
             color: #333;
         }
@@ -48,27 +48,27 @@ button {
     }
 
     &#bg-1 {
-        background-image: url(/assets/img/bg-wolf.jpg);
+        background-image: url(../assets/img/bg-wolf.jpg);
     }
 
     &#bg-2 {
-        background-image: url(/assets/img/bg-canyon.jpg);
+        background-image: url(../assets/img/bg-canyon.jpg);
     }
 
     &#bg-3 {
-        background-image: url(/assets/img/bg-house.jpg);
+        background-image: url(../assets/img/bg-house.jpg);
     }
 
     &#bg-4 {
-        background-image: url(/assets/img/bg-mountain.jpg);
+        background-image: url(../assets/img/bg-mountain.jpg);
     }
 
     &#bg-5 {
-        background-image: url(/assets/img/bg-nature.jpg);
+        background-image: url(../assets/img/bg-nature.jpg);
     }
 
     &#bg-6 {
-        background-image: url(/assets/img/bg-railroad-tracks.jpg);
+        background-image: url(../assets/img/bg-railroad-tracks.jpg);
     }
 }
 
