--- a/assets/scss/partials/_main.scss
+++ b/assets/scss/partials/_main.scss
@@ -48,27 +48,27 @@ button {
     }
 
     &#bg-1 {
-        background-image: url(../assets/img/bg-wolf.jpg);
+        background-image: url(../img/bg-wolf.jpg);
     }
 
     &#bg-2 {
-        background-image: url(../assets/img/bg-canyon.jpg);
+        background-image: url(../img/bg-canyon.jpg);
     }
 
     &#bg-3 {
-        background-image: url(../assets/img/bg-house.jpg);
+        background-image: url(../img/bg-house.jpg);
     }
 
     &#bg-4 {
-        background-image: url(../assets/img/bg-mountain.jpg);
+        background-image: url(../img/bg-mountain.jpg);
     }
 
     &#bg-5 {
-        background-image: url(../assets/img/bg-nature.jpg);
+        background-image: url(../img/bg-nature.jpg);
     }
 
     &#bg-6 {
-        background-image: url(../assets/img/bg-railroad-tracks.jpg);
+        background-image: url(../img/bg-railroad-tracks.jpg);
     }
 }
 
